Fixed overlapping issue with maximized create group div where you couldn't click enter any info. Also smoothed out search input in banner.

--- a/css/banner.css
+++ b/css/banner.css
@@ -72,12 +72,20 @@
 .banner #searchButton{
 	position: absolute;
 	/*Position it so it sits just off to the right side of the searchbarInput*/
-	background: #2c3e50;
 	top: 5px;
 	right: -10px;
-	height: 75%;
+	height: 73%;
 	border-radius: 8px;
 	border-color: transparent;
+
+	/*Set background color as the same dark blue as search bar*/
+	background-color: #2c3e50;
+	/*Set background to have the image of the search icon*/
+	/*Implement this once we recolor the search icon to the same grey as the text color, or maybe the emerald green that we have been using.*/
+/*	background-image: url("../images/glyphicons_free/glyphicons/png/glyphicons-433-plus.png");
+    background-size: 100% 100%; 
+    background-repeat: no-repeat;
+    background-position: center;*/
 }
 .banner #searchButton:hover{
 	cursor: pointer; /*change cursor to be a hand*/
